product_docs/docs/eprs/6.2/02_overview/04_design_replication_system/03_restrictions_on_replicated_database_objects.mdx
---
title: "Restrictions on Replicated Database Objects"
---

<div id="restrictions_on_replicated_database_objects" class="registered_link"></div>

When a subscription is created in a single-master replication system, the table definitions and most database objects and attributes associated with the publication tables are created in the subscription database by the subscription server.

If you so choose, the same process can automatically occur when a primary node is added to a multi-master replication system. The table definitions and most database objects and attributes associated with the publication tables can be created in the newly added primary node by the publication server.

The following is a list of database objects and table attributes that are replicated from the publication in either a single-master or multi-master replication system.

-   Tables
-   Views (for snapshot-only publications) created as tables in the subscription database
-   Primary keys
-   Not null constraints
-   Unique constraints
-   Check constraints
-   Indexes

!!! Note
    Foreign key constraints are not replicated by the publication or subscription server in a single-master replication system. However, in a multi-master replication system, foreign key constraints are replicated from the primary definition node to other primary nodes.

!!! Note
    Sequences (database objects created by the `CREATE SEQUENCE` statement) are not replicated from the publication database to the subscription databases in a single-master replication system. Sequences are also not replicated from the primary definition node to other primary nodes in a multi-master replication system.

xDB Replication Server does have some restrictions on the types of tables it can replicate.

## Restrictions on Oracle Database Objects

Certain types of Oracle partitioned tables can be replicated. See [Replicating Oracle Partitioned Tables](../../10_appendix/04_miscellaneous_xdb_processing_topics/01_publications_and_subscriptions_server_conf_options/04_replicate_oracle_partitioned_tables/#replicate_oracle_partitioned_tables) for details.

Oracle global temporary tables cannot be replicated.

Oracle tables that include the following data types cannot be replicated:

-   `BFILE`
-   `BINARY_DOUBLE`
-   `BINARY_FLOAT`
-   `MLSLABEL`
-   `LONG`
-   `LONG RAW`

Oracle tables with the following data types can be used in snapshot-only publications, but cannot be used in synchronization replications:

-   `BLOB`
-   `CLOB`
-   `NCLOB`
-   `RAW`

Columns with following data types cannot be added to a filter for a PostgreSQL or EDB Postgres Advanced Server database:

- `money`
- `bit`
- `bit varying`


## Restrictions on SQL Server Database Objects

SQL Server tables that include the following data types cannot be replicated:

-   `GEOGRAPHY`
-   `GEOMETRY`
-   `SQL_VARIANT`

!!! Note
    See [Replicating the SQL Server SQL_VARIANT Data Type](../../10_appendix/04_miscellaneous_xdb_processing_topics/06_replicating_sql_server_sql_variant_data_type/#replicating_sql_server_sql_variant_data_type) for a method to replicate tables containing the `SQL_VARIANT` data type under certain conditions.

SQL Server tables with the following data types can be used in snapshot-only publications, but cannot be used in synchronization replications:

-   `BINARY`
-   `IMAGE`
-   `NTEXT`
-   `NVARCHAR(max)`
-   `TEXT`
-   `TIMESTAMP`
-   `VARBINARY`
-   `VARBINARY(max)`

## Restrictions on Postgres Database Objects

For replicating Postgres partitioned tables see [Replicating Postgres Partitioned Tables](../../07_common_operations/10_replicating_postgres_partitioned_tables/#replicating_postgres_partitioned_tables) for details. Postgres tables with the following data types in a column that is part of the primary key cannot be replicated:

-   `BLOB`
-   `BYTEA`
-   `RAW`

PostgreSQL or EDB Postgres Advanced Server database tables that include the following data types cannot be replicated to the Oracle database:

-   `JSON`
-   `JSONB`
-   Geometry data types
-    `tsvector`, `tsquery`, `txid_snapshot`, `pg_lsn`
-    `cidr`, `inet`, `mcaddress`, `mcaddress8`, `uuid`, `Date`
-    `ENUM`, `ARRAY`, range data type (such as `int4range`, `tstzrange`, `numrange`, `daterange`)
-    Any user-defined data type (that is, defined as `CREATE TYPE type_name`)


Postgres tables that include `OID` based large objects cannot be replicated. For information on `OID` based large objects see `pg_largeobject` in the PostgreSQL Core Documentation located at:

> <https://www.postgresql.org/docs/current/static/catalog-pg-largeobject.html>

Postgres tables that include any geometric data types such as POINT, POLYGON, etc., cannot be replicated to an Oracle subscription database.

Postgres tables that include the following data types cannot be replicated to a SQL Server subscription database:

-   `ABSTIME`
-   `ACLITEM`
-   `CHKPASS`
-   Geometric data types (such as `LINE`, `PATH`, `POLYGON`)
-   `CIRCLE`
-   `CUBE`
-   `JSON` 
-   `JSONB`
-   `ROWID`
-   `tsvector`, `tsquery`, `txid_snapshot`, `pg_lsn`
-   `SEG`
-   `Any ARRAY` data type (that is, defined as `data_type[]`)
-   `ENUM`, composite type, range data type (such as `int4range`, `tstzrange`, `numrange`, `daterange`), `mcaddress8`
-   Any user-defined data type (that is, defined as `CREATE TYPE type_name`)

!!! note
Tables containing columns of datatype `mcaddress8` can be replicated from PostgreSQL to PostgreSQL. However, replication from  PostgreSQL to  EDB Postgres Advanced Server and between EDB Postgres Advanced Servers is not supported.
!!!

**Restrictions on Range Data Types**

Postgres data types called range types were first supported in PostgreSQL version 9.2 and Advanced Server version 9.2. Built-in range types refer to the following built-in data types: `int4range, int8range, numrange, tsrange, tstzrange`, and `daterange`.

Postgres tables containing the built-in range types can be included in the publication of a single-master or multi-master replication system.

However, this results in the following restrictions on the subscription databases of a single-master replication system or the additional primary nodes of a multi-master replication system:

-   If a publication table of a single-master replication system contains any built-in range types, then a database can be added as a subscription database only if the database server of the intended subscription database is Postgres version 9.2 or later.
-   If a publication table of the primary definition node in a multi-master replication system contains any built-in range types, then a database can be added as an additional primary node only if the database server of this intended primary node is Postgres version 9.2 or later.

Custom range types constructed with the `CREATE TYPE AS RANGE` command are not supported in xDB Replication Server.
